<resources>
    <string name="app_name">Valv5</string>
    <string name="exit">Exit</string>
    <string name="security_warning_title">Security Warning</string>
    <string name="security_warning_rooted">This device appears to be rooted or tampered with. For security reasons, the app cannot run on compromised devices.</string>
    <string name="gallery_encrypt_file">Encrypt file</string>
    <string name="gallery_decrypt_file">Decrypt file</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open_directory">Encrypt files in dir</string>
    <string name="decrypt_files">Decrypt files in dir</string>
    <string name="load_files">Load encrypted thumbnails</string>
    <string name="loading">loading</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="add_edit_note">Add/edit note</string>
    <string name="edit_text">Edit text</string>
    <string name="share">Share</string>
    <string name="open_with">Open with</string>
    <string name="more">More</string>
    <string name="remove">Remove</string>
    <string name="licenses">Licenses</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="launcher_title">Vault locked</string>
    <string name="launcher_subtitle">Enter decryption password</string>
    <string name="launcher_password_hint">Password</string>
    <string name="launcher_button">Unlock vault</string>
    <string name="launcher_help_title">Help</string>
    <string name="launcher_help_message">Enter a password to use as decryption and encryption key. At least eight characters is recommended.\n\nTip: use different passwords to manage different vaults</string>
    <string name="settings_encryption">Encryption</string>
    <string name="settings_iteration_count_title">Iteration count</string>
    <string name="settings_iteration_count_summary">Set the iteration count used for key generation when encrypting new files. A higher value creates a stronger encryption key but is also slower. Default is 120000.\nCurrent: %1$d</string>
    <string name="settings_iteration_count_hint">Min 20000, max 500000</string>
    <string name="settings_exit_on_lock_title">Exit on lock</string>
    <string name="settings_exit_on_lock_summary_on">Exit the app after locking the vault.</string>
    <string name="settings_exit_on_lock_summary_off">Show the lock screen after locking the vault.</string>
    <string name="settings_return_to_last_app_title">Return to preferred app on auto-lock</string>
    <string name="settings_return_to_last_app_summary_on">When the screen turns off, the app will lock, close, and open the preferred app.</string>
    <string name="settings_return_to_last_app_summary_off">Normal auto-lock behavior when the screen turns off.</string>
    <string name="settings_preferred_app_title">Choose preferred app</string>
    <string name="settings_preferred_app_summary">Select which app to open after auto-lock</string>
    <string name="settings_background_lock_title">Lock when in background</string>
    <string name="settings_background_lock_summary">Automatically lock the vault after being in background for %1$s</string>
    <string name="settings_background_lock_summary_disabled">Vault will not lock automatically when in background</string>
    <string name="settings_background_lock_disabled">Disabled</string>
    <string name="settings_background_lock_30s">30 seconds</string>
    <string name="settings_background_lock_1m">1 minute</string>
    <string name="settings_background_lock_2m">2 minutes</string>
    <string name="settings_background_lock_5m">5 minutes</string>
    <string name="settings_background_lock_10m">10 minutes</string>
    <string name="settings_delete_by_default_title">Delete original files by default</string>
    <string name="settings_delete_by_default_summary_on">\"Delete the original files after importing\" is checked by default.</string>
    <string name="settings_delete_by_default_summary_off">\"Delete the original files after importing\" is unchecked by default.</string>
    <string name="settings_app">App behaviour</string>
    <string name="settings_secure_title">Use FLAG_SECURE</string>
    <string name="settings_secure_summary">Tells Android to not allow screenshots or display the window view on a non-secure display.</string>
    <string name="settings_biometrics_title">Unlock with biometrics</string>
    <string name="settings_biometrics_summary">Unlock your vault with your biometric credentials. Only one vault can be unlocked with biometrics.</string>
    <string name="settings_biometrics_enabled">Biometrics enabled</string>
    <string name="menu_gallery_edit_included_folders">Edit included folders</string>
    <string name="menu_gallery_import">Import files</string>
    <string name="menu_lock_vault">Lock vault</string>
    <string name="menu_order_by">Order by</string>
    <string name="menu_order_by_newest_first">Newest first</string>
    <string name="menu_order_by_oldest_first">Oldest first</string>
    <string name="menu_order_by_largest_first">Largest first</string>
    <string name="menu_order_by_smallest_first">Smallest first</string>
    <string name="menu_order_by_random">Random</string>
    <string name="menu_toggle_filename">Toggle filename visibility</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_all">Show all</string>
    <string name="menu_filter_images">Only images</string>
    <string name="menu_filter_gifs">Only GIFs</string>
    <string name="menu_filter_videos">Only videos</string>
    <string name="menu_filter_text">Only text files</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_about">About</string>
    <string name="menu_generate_index">Generate index</string>
    <string name="gallery_all">All</string>
    <string name="gallery_adapter_folder_name">%1$s (%2$d)</string>
    <string name="gallery_adapter_file_name">%1$s (%2$s)</string>
    <string name="gallery_add_folder">Add a folder</string>
    <string name="gallery_create_encrypted_folder">Create encrypted folder</string>
    <string name="gallery_import_media">Import media</string>
    <string name="gallery_add_text">Import text</string>
    <string name="gallery_added_folder">Added %1$s</string>
    <string name="gallery_import_files">Import files</string>
    <string name="gallery_import_images">Images/GIFs</string>
    <string name="gallery_import_videos">Videos</string>
    <string name="gallery_import_text_write">Text (write)</string>
    <string name="gallery_import_text_title">Write text to import</string>
    <string name="gallery_import_text_import">Import</string>
    <string name="gallery_import_text_overwrite">Overwrite</string>
    <string name="gallery_import_text_hint">Text…</string>
    <string name="gallery_remove_selected_folders">Remove selected folders</string>
    <string name="gallery_delete_selected_files">Delete %1$d selected files</string>
    <string name="gallery_export_selected_files">Export selected</string>
    <string name="gallery_copy_selected_files">Copy to</string>
    <string name="gallery_move_selected_files">Move to</string>
    <string name="gallery_open_in_folder">Open in folder</string>
    <string name="gallery_opening_folder">Opening folder…</string>
    <string name="gallery_title">Gallery</string>
    <string name="gallery_file_deleted">File deleted</string>
    <string name="gallery_file_not_deleted">Error, file could not be deleted</string>
    <string name="gallery_file_exported">Exported to %1$s</string>
    <string name="gallery_selected_files_imported">Encrypted and imported %1$d files</string>
    <string name="gallery_selected_files_imported_with_failed">Imported %1$d files, %2$d failed</string>
    <string name="gallery_selected_files_deleted">Deleted %1$d files</string>
    <string name="gallery_selected_files_deleted_with_failed">Deleted %1$d files, %2$d failed</string>
    <string name="gallery_selected_files_exported">Exported %1$d files</string>
    <string name="gallery_selected_files_exported_with_failed">Exported %1$d files, %2$d failed</string>
    <string name="gallery_selected_files_copied">Copied %1$d files</string>
    <string name="gallery_selected_files_copied_with_failed">Copied %1$d files, %2$d failed</string>
    <string name="gallery_selected_files_moved">Moved %1$d files</string>
    <string name="gallery_selected_files_moved_with_failed">Moved %1$d files, %2$d failed</string>
    <string name="gallery_file_not_exported">Export error: %1$s</string>
    <string name="gallery_loading_all_progress">Loading %1$d files in %2$d directories</string>
    <string name="gallery_loading_background">Loading files…</string>
    <string name="gallery_loading_finalizing">Finalizing scan…</string>
    <string name="gallery_importing_progress">Importing %1$d out of %2$d\n%3$s/%4$s MB\n%5$d%%</string>
    <string name="gallery_exporting_progress">Exporting %1$d out of %2$d\nFailed: %3$d</string>
    <string name="gallery_deleting_progress">Deleting %1$d out of %2$d\nFailed: %3$d</string>
    <string name="gallery_moving_progress">Moving %1$d out of %2$d</string>
    <string name="gallery_copying_progress">Copying %1$d out of %2$d</string>
    <string name="gallery_importing_error">Failed to import %1$s</string>
    <string name="gallery_importing_error_no_thumb">Failed to create thumb for %1$s</string>
    <string name="import_error_password_mismatch">Cannot import to a folder with unknown files.</string>
    <string name="import_error_folder_check">Error checking folder before import.</string>
    <string name="gallery_importing_done">Encrypted and imported %1$d files</string>
    <string name="gallery_video_error">Playback error: %1$s</string>
    <string name="main_press_back_again_to_exit">Press the back button again to lock the vault</string>
    <string name="gallery_loading_note">Decrypting note</string>
    <string name="gallery_note_decrypt_failed">Failed to decrypt note: %1$s</string>
    <string name="gallery_note_read_failed">Failed to read note: %1$s</string>
    <string name="gallery_file_decrypt_failed">Failed to decrypt file: %1$s</string>
    <string name="gallery_file_read_failed">Failed to read file: %1$s</string>
    <string name="gallery_note_edit_hint">Note text</string>
    <string name="gallery_note_save">Save note</string>
    <string name="gallery_note_delete">Delete note</string>
    <string name="gallery_note_click_to_show">Show note</string>
    <string name="gallery_share_locked">Unlock your vault to import the shared files</string>
    <string name="gallery_share_decrypting">Decrypting to cache…</string>
    <string name="gallery_share_decrypting_error">Decrypt error: %1$s</string>
    <string name="gallery_share_with">Share/open with</string>
    <string name="gallery_click_to_open_directory">Click to open\n%1$s</string>
    <string name="gallery_find_files_no_permission">No permission to read %1$s, please add it again</string>
    <string name="gallery_no_folders">It\'s empty here!\n\nStart by adding a folder or importing some files.</string>
    <string name="index_generating">Generating index…</string>
    <string name="index_generating_progress">Indexing: %1$d%%</string>
    <string name="index_generated">Index generated for %1$d files</string>
    <string name="index_generate_error">Failed to generate index</string>
    <string name="index_generate_cancelled">Index generation cancelled</string>
    <string name="index_generate_cancelled_partial">Cancelled. Progress saved: %1$d files indexed</string>
    <string name="select_destination">Select destination:</string>
    <string name="use_other_folder">Use other folder</string>
    <string name="dialog_edit_included_title">Select folders to remove from the start screen</string>
</resources>