<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_app">

        <Preference
            android:icon="@drawable/ic_round_folder_open_24"
            android:key="app_edit_folders"
            android:summary="@string/dialog_edit_included_title"
            android:title="@string/menu_gallery_edit_included_folders" />

        <SwitchPreferenceCompat
            android:key="app_biometrics"
            android:summary="@string/settings_biometrics_summary"
            app:defaultValue="false"
            app:icon="@drawable/rounded_fingerprint_24"
            app:title="@string/settings_biometrics_title" />

        <SwitchPreferenceCompat
            android:key="app_secure"
            android:summary="@string/settings_secure_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_outline_lock_24"
            app:title="@string/settings_secure_title" />

        <SwitchPreferenceCompat
            android:key="app_exit_on_lock"
            app:defaultValue="true"
            app:icon="@drawable/ic_outline_lock_24"
            app:summaryOff="@string/settings_exit_on_lock_summary_off"
            app:summaryOn="@string/settings_exit_on_lock_summary_on"
            app:title="@string/settings_exit_on_lock_title" />

        <SwitchPreferenceCompat
            android:key="app_return_to_last_app"
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:summaryOff="@string/settings_return_to_last_app_summary_off"
            app:summaryOn="@string/settings_return_to_last_app_summary_on"
            app:title="@string/settings_return_to_last_app_title" />

        <Preference
            android:key="app_preferred_app"
            android:dependency="app_return_to_last_app"
            app:icon="@drawable/round_edit_24"
            app:summary="@string/settings_preferred_app_summary"
            app:title="@string/settings_preferred_app_title" />

        <ListPreference
            android:key="app_background_lock_timeout"
            android:defaultValue="30"
            android:entries="@array/background_lock_timeout_entries"
            android:entryValues="@array/background_lock_timeout_values"
            app:icon="@drawable/ic_outline_lock_24"
            app:title="@string/settings_background_lock_title"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            android:key="encryption_delete_by_default"
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_delete_forever_24"
            app:summaryOff="@string/settings_delete_by_default_summary_off"
            app:summaryOn="@string/settings_delete_by_default_summary_on"
            app:title="@string/settings_delete_by_default_title" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_encryption">

        <Preference
            android:icon="@drawable/round_key_24"
            android:key="encryption_iteration_count"
            android:summary="@string/settings_iteration_count_summary"
            android:title="@string/settings_iteration_count_title" />

    </PreferenceCategory>

</PreferenceScreen>